# Shinsung_EmbeddedC

./: .gitignore  README.md
IMU3/: function.c  main.c
IMU3/include/: common.h  function.h
IMU3_20201020 수정본/: .ccsproject  .cproject  .project  DSP2834x_DefaultIsr.c  DSP2834x_GlobalVariableDefs.c  DSP2834x_Headers_BIOS.cmd  DSP2834x_PieVect.c  DSP2834x_Sci.c  DSP2834x_Spi.c  DSP2834x_SysCtrl.c  TMS320C28346.cmd  clock.cfg  function.c  main_ver1.c
IMU3_20201020 수정본/.config/xconfig_clock/: .buildtime  .xdcenv.mak  compiler.opt  compiler.opt.defs  config.bld  custom.mak  package.bld  package.mak
IMU3_20201020 수정본/.launches/: TMS320C28346.launch  clock_TMS320C28346.launch
IMU3_20201020 수정본/Debug/: DSP2834x_DefaultIsr.pp  DSP2834x_PieCtrl.pp  DSP2834x_Sci.pp  DSP2834x_SysCtrl.pp  TMS320C28346.map  TMS320C28346.map-  TMS320C28346.out  TMS320C28346_linkInfo.xml  ccsObjs.opt  function.pp  main.pp  makefile  subdir_rules.mk
IMU3_20201020 수정본/Release/: DSP2834x_GlobalVariableDefs.pp  DSP2834x_PieVect.pp  DSP2834x_Spi.pp  TMS320C28346.map  TMS320C28346_linkInfo.xml  clock_TMS320C28346.map  clock_TMS320C28346_linkInfo.xml  function.pp  main.pp  makefile  subdir_rules.mk  subdir_vars.mk
IMU3_20201020 수정본/include/: common.h  function.h
IMU3_20201020 수정본/src/: makefile.libs
IMU3_20201020 수정본/src/sysbios/: makefile  (+1 more)
IMU3_20201020 수정본/targetConfigs/: TMS320C28346.ccxml
ver 1. 속도값까지 반영/: CMakeLists.txt  main.cpp  teraterm.txt
ver 1. 속도값까지 반영/header/: Initialize.h  ReadIMU.h  common.h  function.h
ver 1. 속도값까지 반영/source/: Initialize.cpp  ReadIMU.cpp  function.cpp
(+47 files in other folders)
